# programming-support-courses

./: 404.html  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  sitemap.xml
.github/workflows/: deploy.yml
Exercises/: index.html
Exercises/VSCodeDebugExercises/: index.html
Lessons/: index.html
Lessons/Compiler/: index.html
Lessons/IDE/: index.html
Lessons/debbuger/: index.html
Simple-Cpp-Setup/src/: main.cpp
assets/css/: styles.651dfbb3.css  styles.88913b6b.css  styles.8be2c32b.css  styles.a99d5389.css
assets/js/: 00a96752.0268a0f9.js  00a96752.1f925410.js  04a83312.57e309b8.js  04a83312.649d887e.js  04a83312.70455cb5.js  04a83312.84443968.js  17896441.1a0b632c.js  17896441.2f51277b.js  17896441.c562e39a.js  17896441.ecb31502.js  1be78505.35e50368.js  1be78505.5484aaff.js  1be78505.905443e0.js  1be78505.e18c7481.js  1df93b7f.355edb9c.js  1df93b7f.38264900.js  1df93b7f.821c9649.js  21a92446.0badb07e.js  21a92446.d11f5f01.js  21a92446.fc5b9ec5.js  256.6250dc58.js  27455db3.814d9948.js  3720c009.1de99bbe.js  387a05da.66a8e648.js  55960ee5.778b5e53.js  5eb33544.4ba522ad.js  5eb33544.9e3df216.js  5eb33544.e318def8.js  663.f5b7a817.js  6cbc82e3.e1e3ebdf.js  6ee0955b.d00ad1c7.js  758.360b5641.js  814.78e30388.js  89d1709e.5044a778.js  8cd982f6.2c2e0bf7.js  935f2afb.417aa50b.js  935f2afb.66e99752.js  935f2afb.f96fa08b.js  956.7f616a64.js  956.8650a0bb.js  (+28 more)
content/Lessons/: Compiler.md  (+4 more)
content/Lessons/_debbuger/Simple-Cpp-Setup/: CMakeLists.txt
content/Lessons/_debbuger/Simple-Cpp-Setup/src/: main.cpp
tags/: index.html
(+22 files in other folders)
